# thrash-protect

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  ChangeLog  INSTALL.md  LICENSE  Makefile  README.md  README.rst  changelog-0.14.1.md  changelog-0.14.2.md  changelog-0.14.md  pyproject.toml  setup.py  thrash-bot.py  thrash-protect.conf.example  thrash-protect.py  thrash-protect.yaml.example  thrash_protect.py  trash-protect.py
.github/workflows/: ci.yml  release.yml
archlinux/: Makefile  PKGBUILD_
debian/: changelog  control  copyright  dirs  docs  thrash-protect.doc-base.EX  thrash-protect.init
docs/: CODE_REVIEW.md  TODO.md  cgroup-enhancement-ideas.md  config-refactor-plan.md
openrc/: thrash-protect
puppet/manifests/: init.pp
puppet/templates/: nrpe.cfg.erb
puppet/thrash_protect/manifests/: init.pp
puppet/thrash_protect/templates/: nrpe.cfg.erb
rpm/: Makefile  thrash-protect.rhel6.spec  thrash-protect.rhel7.spec  thrash-protect.spec
systemd/: thrash-protect.service
systemv/: thrash-protect
tests/: README.md  test_thrash_protect.py  thrash-bot.py  thrash-bot2.py
upstart/: thrash-protect.conf
wrapping/archlinux/: PKGBUILD
wrapping/systemd/: thrash-protect.service
